--- a/Project2/covid19Survey-App/app/src/main/res/layout/activity_vaccine_type.xml
+++ b/Project2/covid19Survey-App/app/src/main/res/layout/activity_vaccine_type.xml
@@ -9,7 +9,7 @@
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:checkedButton="@id/sinovacButton"
+        android:checkedButton="@id/radioGroup"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
